--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "PHP array functions examples.",
     "autoload": {
         "psr-4": {
-            "SiddikWeb\\PhpArray\\": "src/"
+            "App\\": "src/"
         }
     },
     "authors": [
